<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xlarge">

    <ImageView
        android:id="@+id/condicionInfo"
        android:layout_width="64dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/spacing_xlarge"
        android:layout_marginRight="@dimen/spacing_xlarge"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lugarInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/identificadorLugar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valorLugarInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="1dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/estadoInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/estado"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valorEstadoInfo"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="1dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperaturaInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/temperaturaLugar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valorTemperaturaInfo"
                android:layout_width="237dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="1dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/latitudInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/latitud"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valorLatitudInfo"
                android:layout_width="207dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="1dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/longitudInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/longitud"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valorLongitudInfo"
                android:layout_width="207dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="1dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>